--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,12 @@ services:
       MYSQL_USER: "root"
       MYSQL_PASSWORD: "example_root_password"
       MYSQL_HOST: "mysql"
+      RWS_APPLICATION_ID:
+      RWS_AFFILIATION_ID:
+      FACEBOOK_CLIENT_ID:
+      FACEBOOK_CLIENT_SECRET:
+      GOOGLE_CLIENT_ID:
+      GOOGLE_CLIENT_SECRET:
     command: "bundle exec rails server -p 3000 -b '0.0.0.0'"
     tty: true
     stdin_open: true
