--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       FACEBOOK_CLIENT_SECRET:
       GOOGLE_CLIENT_ID:
       GOOGLE_CLIENT_SECRET:
+      AWS_ACCESS_KEY_ID:
+      AWS_SECRET_ACCESS_KEY:
     command: "bundle exec rails server -p 3000 -b '0.0.0.0'"
     tty: true
     stdin_open: true
